WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157876
Playback controls should not be active for muted media elements.
https://bugs.webkit.org/show_bug.cgi?id=157876
Summary
Playback controls should not be active for muted media elements.
Jer Noble
Reported
2016-05-18 18:02:59 PDT
Playback controls should not be active for muted media elements.
Attachments
Patch
(6.64 KB, patch)
2016-05-18 18:07 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(6.63 KB, patch)
2016-05-19 09:04 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-05-18 18:03:37 PDT
<
rdar://problem/26007525
>
Jer Noble
Comment 2
2016-05-18 18:07:00 PDT
Created
attachment 279330
[details]
Patch
Jer Noble
Comment 3
2016-05-19 09:04:27 PDT
Created
attachment 279392
[details]
Patch for landing
Jer Noble
Comment 4
2016-05-19 09:21:45 PDT
Committed
r201167
: <
http://trac.webkit.org/changeset/201167
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug